2005-06-06  Emmanuel Dreyfus  <manu@netbsd.org>

	* src/racoon/isakmp_quick.c: endianness bug fix

	From Frederic Senault  <fred@lacave.net>
	* src/racoon/privsep.c: fix Xauth login with PAM authentication

2005-05-31  Aidas Kasparas  <a.kasparas@gmc.lt>

	* src/racoon/ipsec_doi.c: Inserted missing 0th element of
	  rm_idtype2doi array. Bug #1199700 fix.

2005-05-20  Emmanuel Dreyfus  <manu@netbsd.org>

	From Mike Robinson <sundialservices@users.sourceforge.net>
	* src/racoon/isakmp_xauth.c: really delete phase 1 on Xauth failure

	* src/libipsec/pfkey.c src/racoon/ipsec_doi.c: Fix NAT-T + IPcomp

	From hgates <hgates.lists@gmail.com>
	* src/racoon/proposal.c: fix SPI size test for IPcomp

	From Larry Baird <lab@gta.com>
	* src/racoon/{handler.c|ipsec_doi.c|remoteconf.h|remoteconf.c}: When 
	  altering lifetime, duplicate the proposal instead of modifying 
	  the configured one.

2005-05-14  Emmanuel Dreyfus  <manu@netbsd.org>

	* src/libipsec/policy_parse.y: fix parse bug in IPsec policies

2005-05-13  Emmanuel Dreyfus  <manu@netbsd.org>

	* src/racoon/isakmp.c: For acquire messages, when NAT-T is in use,
	  consider null port as a wildcard and use IKE port

2005-05-13  Yvan Vanhullebus  <vanhu@free.fr>

	* src/racoon/isakmp.c: Fixed a double ph2handler free in
	  isakmp_ph2begin_i().

---------------------------------------------

	0.6b2 released

2005-05-10  Emmanuel Dreyfus  <manu@netbsd.org>

	* src/racoon/samples/roadwarrior/client/racoon.conf
	  src/racoon/samples/roadwarrior/server/{racoon.conf|racoon.conf-radius}
	  src/racoon/samples/roadwarrior/server/phase1-down.sh: removed file
	  src/racoon/samples/roadwarrior/README: update config files to 
	  higher security settings. Remove now useless phase 1 down 
	  script on server side.

	* src/racoon/ipsec_doi.c: check for lifebyte in proposals
	* src/racoon/ipsec_doi.c: fix a bug in proposal_check claim for phase 1

	* src/racoon/{cfparse.y|cftoken.l|racoon.conf.5|isakmp_cfg.c}